Replace ckeditor with tinymce and get rid of references in the code
