# DroolTool.API/swagger.json
@@ -364,18 +364,6 @@
         }
       }
     },
-    "/FileResource/CkEditorUpload": {
-      "post": {
-        "tags": [
-          "FileResource"
-        ],
-        "responses": {
-          "200": {
-            "description": "Success"
-          }
-        }
-      }
-    },
     "/FileResource/{fileResourceGuidAsString}": {
       "get": {
         "tags": [
